Small cosmetic fix

--- a/wanikani-phonetic-compounds/bootstrap/css/bootstrap.crop.css
+++ b/wanikani-phonetic-compounds/bootstrap/css/bootstrap.crop.css
@@ -1,5 +1,5 @@
 
-.btn-group{position:relative;display:inline-block;*display:inline;*zoom:1;font-size:0;vertical-align:middle;white-space:nowrap;*margin-left:.3em}
+.btn-group{position:relative;display:inline-block;*display:inline;*zoom:1;font-size:0;vertical-align:middle;white-space:nowrap;*margin-left:.3em;bottom:4px}
 
 .btn-group:first-child{*margin-left:0}
 
