Progress for the timer, better integration as well

--- a/wanikani-jikan-timer/css/jikan.css
+++ b/wanikani-jikan-timer/css/jikan.css
@@ -28,7 +28,7 @@
 
 #reviews-summary #jikan > div
 {
-    padding: 20px;
+    padding: 0 20px;
 }
 
 #reviews-summary #jikan h2 strong:before
@@ -66,4 +66,70 @@
     -moz-user-select: none;
     -ms-user-select: none;
     user-select: none;
+}
+
+.axis {
+	font: 12px sans-serif;
+}
+
+.axis path,
+.axis line {
+	fill: none;
+	stroke: #000;
+	shape-rendering: crispEdges;
+}
+
+.chart rect {
+    stroke: white;
+    fill: steelblue;
+}
+
+.chart rect:hover {
+    stroke: white;
+    fill: lightblue;
+}
+
+.d3-tip {
+    line-height: 1;
+    font: 14px sans-serif;
+    font-weight: bold;
+    padding: 12px;
+    background: rgba(0, 0, 0, 0.8);
+    color: #fff;
+    border-radius: 2px;
+}
+
+/* Creates a small triangle extender for the tooltip */
+.d3-tip:after {
+    box-sizing: border-box;
+    display: inline;
+    font-size: 10px;
+    width: 100%;
+    line-height: 1;
+    color: rgba(0, 0, 0, 0.8);
+    content: "\25BC";
+    position: absolute;
+    text-align: center;
+}
+
+/* Style northward tooltips differently */
+.d3-tip.n:after {
+    margin: -1px 0 0 0;
+    top: 100%;
+    left: 0;
+}
+
+.svg-container {
+    display: inline-block;
+    position: relative;
+    width: 95%;
+    padding-bottom: 10px !important; /* aspect ratio */
+    vertical-align: top;
+    overflow: hidden;
+}
+.svg-content-responsive {
+    display: inline-block;
+    position: relative;
+    top: 10px;
+    left: 0;
 }
