--- a/wanikani-phonetic-compounds/css/chargrid.css
+++ b/wanikani-phonetic-compounds/css/chargrid.css
@@ -1,27 +1,22 @@
-ul,
-ol
+.wk_namespace ul,
+.wk_namespace ol
 {
     font-size: 14px;
     padding:0;
     margin:0 0 10px 25px
 }
 
-a
+.wk_namespace a
 {
     text-decoration:none
 }
 
-ul.radical
+.wk_namespace ul.radical
 {
     font-size: 16px;
 }
 
-ul.single-character-grid li[id|=kanji],
-ul.single-character-grid tr[id|=kanji],
-ul.multi-character-grid li[id|=kanji],
-ul.multi-character-grid tr[id|=kanji],
-.kotoba-table-list li[id|=kanji],
-.kotoba-table-list tr[id|=kanji]
+.wk_namespace ul.single-character-grid li[id|=kanji]
 {
     background-color:#f100a1;
     background-image:-moz-linear-gradient(top, #f0a, #dd0093);
@@ -36,12 +31,7 @@ ul.multi-character-grid tr[id|=kanji],
     border-left:1px solid #f6c
 }
 
-ul.single-character-grid li[id|=radical],
-ul.single-character-grid tr[id|=radical],
-ul.multi-character-grid li[id|=radical],
-ul.multi-character-grid tr[id|=radical],
-.kotoba-table-list li[id|=radical],
-.kotoba-table-list tr[id|=radical]
+.wk_namespace ul.single-character-grid li[id|=radical]
 {
     background-color:#00a1f1;
     background-image:-moz-linear-gradient(top, #0af, #0093dd);
@@ -56,12 +46,7 @@ ul.multi-character-grid tr[id|=radical],
     border-left:1px solid #88d7ff
 }
 
-ul.single-character-grid li[id|=vocabulary],
-ul.single-character-grid tr[id|=vocabulary],
-ul.multi-character-grid li[id|=vocabulary],
-ul.multi-character-grid tr[id|=vocabulary],
-.kotoba-table-list li[id|=vocabulary],
-.kotoba-table-list tr[id|=vocabulary]
+.wk_namespace ul.single-character-grid li[id|=vocabulary]
 {
     background-color:#a100f1;
     background-image:-moz-linear-gradient(top, #a0f, #9300dd);
@@ -76,21 +61,18 @@ ul.multi-character-grid tr[id|=vocabulary],
     border-left:1px solid #c655ff
 }
 
-ul.single-character-grid,
-ul.multi-character-grid
+.wk_namespace ul.single-character-grid
 {
     margin:0
 }
 
-ul.single-character-grid li.character-item.locked,
-ul.multi-character-grid li.character-item.locked
+.wk_namespace ul.single-character-grid li.character-item.locked
 {
     background-image:url("https://cdn-staging.wanikani.com/assets/default-v2/stripes-5e8494366c1615da046bd0f587cfeef6786e7ba17863df1329767ca3b89140e0.png");
     background-repeat:repeat
 }
 
-ul.single-character-grid li.character-item.locked.kanji,
-ul.multi-character-grid li.character-item.locked.kanji
+.wk_namespace ul.single-character-grid li.character-item.locked.kanji
 {
     background-color:#f0a;
     background-image:none;
@@ -103,8 +85,7 @@ ul.multi-character-grid li.character-item.locked.kanji
     filter:none
 }
 
-ul.single-character-grid li.character-item.burned,
-ul.multi-character-grid li.character-item.burned
+.wk_namespace ul.single-character-grid li.character-item.burned
 {
     background-color:#505050;
     background-image:-moz-linear-gradient(top, #555, #484848);
@@ -122,17 +103,14 @@ ul.multi-character-grid li.character-item.burned
     box-shadow:0 10px 10px rgba(0,0,0,0.4) inset
 }
 
-ul.single-character-grid li.character-item.burned span.character,
-ul.single-character-grid li.character-item.burned ul>li,
-ul.multi-character-grid li.character-item.burned span.character,
-ul.multi-character-grid li.character-item.burned ul>li
+.wk_namespace ul.single-character-grid li.character-item.burned span.character,
+.wk_namespace ul.single-character-grid li.character-item.burned ul>li
 {
     opacity:0.4;
     filter:alpha(opacity=40)
 }
 
-ul.single-character-grid li.character-item,
-ul.multi-character-grid li.character-item
+.wk_namespace ul.single-character-grid li.character-item
 {
     display:inline-block;
     position:relative;
@@ -141,8 +119,7 @@ ul.multi-character-grid li.character-item
     text-align:center
 }
 
-ul.single-character-grid li.character-item span.character,
-ul.multi-character-grid li.character-item span.character
+.wk_namespace ul.single-character-grid li.character-item span.character
 {
     font-size:72px;
     font-weight:bold;
@@ -150,28 +127,24 @@ ul.multi-character-grid li.character-item span.character
     text-shadow:0 2px 0 rgba(0,0,0,0.3)
 }
 
-ul.single-character-grid li.character-item a,
-ul.multi-character-grid li.character-item a
+.wk_namespace ul.single-character-grid li.character-item a
 {
     display:block;
     color:inherit
 }
 
-ul.single-character-grid li.character-item a:hover,
-ul.multi-character-grid li.character-item a:hover
+.wk_namespace ul.single-character-grid li.character-item a:hover
 {
     text-decoration:none
 }
 
-ul.single-character-grid li.character-item ul,
-ul.multi-character-grid li.character-item ul
+.wk_namespace ul.single-character-grid li.character-item ul
 {
     margin:0;
     padding-bottom:10px
 }
 
-ul.single-character-grid li.character-item ul>li,
-ul.multi-character-grid li.character-item ul>li
+.wk_namespace ul.single-character-grid li.character-item ul>li
 {
     display:block;
     font-weight:400;
@@ -179,16 +152,13 @@ ul.multi-character-grid li.character-item ul>li
     text-shadow:0 1px 0 rgba(0,0,0,0.3)
 }
 
-ul.single-character-grid li.character-item ul>li:nth-child(2),
-ul.multi-character-grid li.character-item ul>li:nth-child(2)
+.wk_namespace ul.single-character-grid li.character-item ul>li:nth-child(2)
 {
     font-family:"Open Sans", "Helvetica Neue", Helvetica, Arial, sans-serif
 }
 
-ul.single-character-grid li.character-item span.character,
-ul.single-character-grid li.character-item ul>li,
-ul.multi-character-grid li.character-item span.character,
-ul.multi-character-grid li.character-item ul>li
+.wk_namespace ul.single-character-grid li.character-item span.character,
+.wk_namespace ul.single-character-grid li.character-item ul>li
 {
     -webkit-transition:text-shadow ease-out 0.3s;
     -moz-transition:text-shadow ease-out 0.3s;
@@ -196,34 +166,29 @@ ul.multi-character-grid li.character-item ul>li
     transition:text-shadow ease-out 0.3s
 }
 
-ul.single-character-grid li.character-item:hover ul>li,
-ul.multi-character-grid li.character-item:hover ul>li
+.wk_namespace ul.single-character-grid li.character-item:hover ul>li
 {
     text-shadow:0 1px 0 rgba(0,0,0,0.3),0 0 40px #fff
 }
 
-ul.single-character-grid li.character-item:hover span.character,
-ul.multi-character-grid li.character-item:hover span.character
+.wk_namespace ul.single-character-grid li.character-item:hover span.character
 {
     text-shadow:0 2px 0 rgba(0,0,0,0.3),0 0 40px #fff
 }
 
-ul.single-character-grid li.character-item:active,
-ul.multi-character-grid li.character-item:active
+.wk_namespace ul.single-character-grid li.character-item:active
 {
     -webkit-box-shadow:0 15px 15px rgba(0,0,0,0.4) inset;
     -moz-box-shadow:0 15px 15px rgba(0,0,0,0.4) inset;
     box-shadow:0 15px 15px rgba(0,0,0,0.4) inset
 }
 
-ul.single-character-grid li.character-item:active ul>li,
-ul.multi-character-grid li.character-item:active ul>li
+.wk_namespace ul.single-character-grid li.character-item:active ul>li
 {
     text-shadow:0 1px 0 rgba(0,0,0,0.3),0 0 40px #fff
 }
 
-ul.single-character-grid li.character-item:active span.character,
-ul.multi-character-grid li.character-item:active span.character
+.wk_namespace ul.single-character-grid li.character-item:active span.character
 {
     text-shadow:0 -2px 0 rgba(0,0,0,0.3),0 0 40px #fff
 }
@@ -231,7 +196,7 @@ ul.multi-character-grid li.character-item:active span.character
 
 @media (min-width: 980px) and (max-width: 1199px)
 {
-    ul.single-character-grid li.character-item:nth-child(even)
+    .wk_namespace ul.single-character-grid li.character-item:nth-child(even)
     {
         width:117px
     }
@@ -239,17 +204,17 @@ ul.multi-character-grid li.character-item:active span.character
 
 @media (min-width: 768px) and (max-width: 979px)
 {
-    ul.single-character-grid .character-item
+    .wk_namespace ul.single-character-grid .character-item
     {
         width:122px
     }
 
-    ul.single-character-grid .character-item:nth-child(even)
+    .wk_namespace ul.single-character-grid .character-item:nth-child(even)
     {
         width:123px
     }
 
-    ul.single-character-grid .character-item:nth-child(6n)
+    .wk_namespace ul.single-character-grid .character-item:nth-child(6n)
     {
         width:124px
     }
@@ -258,23 +223,23 @@ ul.multi-character-grid li.character-item:active span.character
 
 @media (max-width: 767px)
 {
-    ul.single-character-grid li[id|=radical] img
+    .wk_namespace ul.single-character-grid li[id|=radical] img
     {
         width:25px;
         height:25px
     }
 
-    ul.single-character-grid li[id|=radical] ul>li:first-child
+    .wk_namespace ul.single-character-grid li[id|=radical] ul>li:first-child
     {
         display:none !important
     }
 
-    ul.single-character-grid li[id|=radical] ul>li:last-child
+    .wk_namespace ul.single-character-grid li[id|=radical] ul>li:last-child
     {
         line-height:2.6em
     }
 
-    ul.single-character-grid li.character-item
+    .wk_namespace ul.single-character-grid li.character-item
     {
         display:block;
         width:100%;
@@ -282,18 +247,18 @@ ul.multi-character-grid li.character-item:active span.character
         border-left:none
     }
 
-    ul.single-character-grid li.character-item a
+    .wk_namespace ul.single-character-grid li.character-item a
     {
         padding:12px
     }
 
-    ul.single-character-grid li.character-item span.character
+    .wk_namespace ul.single-character-grid li.character-item span.character
     {
         font-size:27px;
         line-height:1em
     }
 
-    ul.single-character-grid li.character-item ul
+    .wk_namespace ul.single-character-grid li.character-item ul
     {
         display:inline-block;
         float:right;
@@ -301,12 +266,12 @@ ul.multi-character-grid li.character-item:active span.character
         font-size:10px
     }
 
-    ul.single-character-grid li.character-item ul>li
+    .wk_namespace ul.single-character-grid li.character-item ul>li
     {
         line-height:1.4em
     }
 
-    ul.single-character-grid li.character-item.burned
+    .wk_namespace ul.single-character-grid li.character-item.burned
     {
         border-left:0;
         -webkit-box-shadow:0 5px 5px rgba(0,0,0,0.4) inset;
@@ -314,14 +279,14 @@ ul.multi-character-grid li.character-item:active span.character
         box-shadow:0 5px 5px rgba(0,0,0,0.4) inset
     }
 
-    ul.single-character-grid li.character-item:active
+    .wk_namespace ul.single-character-grid li.character-item:active
     {
         -webkit-box-shadow:0 8px 8px rgba(0,0,0,0.4) inset;
         -moz-box-shadow:0 8px 8px rgba(0,0,0,0.4) inset;
         box-shadow:0 8px 8px rgba(0,0,0,0.4) inset
     }
 
-    ul.single-character-grid span.recently-unlocked-badge:before
+    .wk_namespace ul.single-character-grid span.recently-unlocked-badge:before
     {
         top:1.1em;
         left:-1.1em;
@@ -330,7 +295,7 @@ ul.multi-character-grid li.character-item:active span.character
     }
 }
 
-ul.multi-character-grid-extra-styling-767px
+.wk_namespace ul.multi-character-grid-extra-styling-767px
 {
     -webkit-border-radius:3px;
     -moz-border-radius:3px;
@@ -340,7 +305,7 @@ ul.multi-character-grid-extra-styling-767px
     box-shadow:0 2px 0 rgba(0,0,0,0.3)
 }
 
-ul.multi-character-grid-extra-styling-767px li.character-item:first-child
+.wk_namespace ul.multi-character-grid-extra-styling-767px li.character-item:first-child
 {
     -webkit-border-top-left-radius:3px;
     -moz-border-radius-topleft:3px;
@@ -349,7 +314,7 @@ ul.multi-character-grid-extra-styling-767px li.character-item:first-child
     -moz-border-radius-topright:3px;
     border-top-right-radius:3px}
 
-ul.multi-character-grid-extra-styling-767px li.character-item:last-child
+.wk_namespace ul.multi-character-grid-extra-styling-767px li.character-item:last-child
 {
     -webkit-border-bottom-left-radius:3px;
     -moz-border-radius-bottomleft:3px;
@@ -360,13 +325,13 @@ ul.multi-character-grid-extra-styling-767px li.character-item:last-child
 }
 
 
-.recently-unlocked-badge
+.wk_namespace .recently-unlocked-badge
 {
     position:absolute;
     left:0
 }
 
-.recently-unlocked-badge:before
+.wk_namespace .recently-unlocked-badge:before
 {
     display:block;
     position:absolute;
@@ -389,7 +354,7 @@ ul.multi-character-grid-extra-styling-767px li.character-item:last-child
 }
 
 
-ul.multi-character-grid-extra-styling-767px
+.wk_namespace ul.multi-character-grid-extra-styling-767px
 {
     -webkit-border-radius:3px;
     -moz-border-radius:3px;
@@ -398,7 +363,7 @@ ul.multi-character-grid-extra-styling-767px
     -moz-box-shadow:0 2px 0 rgba(0,0,0,0.3);
     box-shadow:0 2px 0 rgba(0,0,0,0.3)}
 
-ul.multi-character-grid-extra-styling-767px li.character-item:first-child
+.wk_namespace ul.multi-character-grid-extra-styling-767px li.character-item:first-child
 {
     -webkit-border-top-left-radius:3px;
     -moz-border-radius-topleft:3px;
@@ -407,7 +372,7 @@ ul.multi-character-grid-extra-styling-767px li.character-item:first-child
     -moz-border-radius-topright:3px;
     border-top-right-radius:3px}
 
-ul.multi-character-grid-extra-styling-767px li.character-item:last-child
+.wk_namespace ul.multi-character-grid-extra-styling-767px li.character-item:last-child
 {
     -webkit-border-bottom-left-radius:3px;
     -moz-border-radius-bottomleft:3px;
