--- a/wanikani-jikan-timer/css/jikan.css
+++ b/wanikani-jikan-timer/css/jikan.css
@@ -80,7 +80,10 @@
     user-select: none;
 }
 
-.wk_namespace .xaxis,
+.wk_namespace .xaxis {
+	font: 8px sans-serif;
+}
+
 .wk_namespace .yaxis {
 	font: 12px sans-serif;
 }
@@ -94,33 +97,51 @@
 	shape-rendering: crispEdges;
 }
 
-.wk_namespace .data-bar.rad {
+.wk_namespace .answer-type.rad {
     stroke: white;
-    fill: #a0f;
+    fill: #00a1f1;
 }
 
-.wk_namespace .data-bar.rad:hover {
+.wk_namespace .bar-group:hover .answer-type.rad {
     fill: #c655ff;
 }
-.wk_namespace .data-bar.kan {
+.wk_namespace .answer-type.kan {
     stroke: white;
     fill: #0093dd;
 }
 
-.wk_namespace .data-bar.kan:hover {
+.wk_namespace .bar-group:hover .answer-type.kan {
     fill: #00a1f1;
 }
-.wk_namespace .data-bar.voc {
+.wk_namespace .answer-type.voc {
     stroke: white;
     fill: #a0f;
 }
 
-.wk_namespace .data-bar.voc:hover {
+.wk_namespace .bar-group:hover .answer-type.voc {
     fill: #c655ff;
 }
 
 .wk_namespace .capitalize {
     text-transform: capitalize;
+}
+
+.meaning {
+    fill-opacity: 0;
+}
+
+.reading {
+    stroke: white;
+    fill: url(#dotted);
+}
+
+.wk_jikan_correct {
+    fill-opacity: 0;
+}
+
+.wk_jikan_incorrect {
+    stroke: white;
+    fill: url(#diagonalHatch);
 }
 
 /* The tooltips are appended to the end of the bbody, add your namespace there! */
@@ -170,6 +191,6 @@
     left: 0;
 }
 
-.fill {
+.wk_namespace .fill {
     fill: #F2F4F6;
 }
