--- a/wanikani-phonetic-compounds/bootstrap/css/bootstrap.crop.css
+++ b/wanikani-phonetic-compounds/bootstrap/css/bootstrap.crop.css
@@ -268,3 +268,231 @@
 .wk_namespace .text-center {
     text-align: center;
 }
+
+.wk_namespace .dropup,
+.wk_namespace .dropdown {
+    position: relative
+}
+
+.wk_namespace .dropdown-toggle {
+    *margin-bottom: -3px
+}
+
+.wk_namespace .dropdown-toggle:active,
+.wk_namespace .open .dropdown-toggle {
+    outline: 0
+}
+
+.wk_namespace .caret {
+    display: inline-block;
+    width: 0;
+    height: 0;
+    vertical-align: top;
+    border-top: 4px solid #000;
+    border-right: 4px solid transparent;
+    border-left: 4px solid transparent;
+    content: ""
+}
+
+.wk_namespace .dropdown .caret {
+    margin-top: 8px;
+    margin-left: 2px
+}
+
+.wk_namespace .dropdown-menu {
+    position: absolute;
+    top: 100%;
+    left: 0;
+    z-index: 1000;
+    display: none;
+    float: left;
+    min-width: 160px;
+    padding: 5px 0;
+    margin: 2px 0 0;
+    list-style: none;
+    background-color: #fff;
+    border: 1px solid #ccc;
+    border: 1px solid rgba(0,0,0,0.2);
+    *border-right-width: 2px;
+    *border-bottom-width: 2px;
+    -webkit-border-radius: 6px;
+    -moz-border-radius: 6px;
+    border-radius: 6px;
+    -webkit-box-shadow: 0 5px 10px rgba(0,0,0,0.2);
+    -moz-box-shadow: 0 5px 10px rgba(0,0,0,0.2);
+    box-shadow: 0 5px 10px rgba(0,0,0,0.2);
+    -webkit-background-clip: padding-box;
+    -moz-background-clip: padding;
+    background-clip: padding-box
+}
+
+.wk_namespace .dropdown-menu.pull-right {
+    right: 0;
+    left: auto
+}
+
+.wk_namespace .dropdown-menu .divider {
+    *width: 100%;
+    height: 1px;
+    margin: 9px 1px;
+    *margin: -5px 0 5px;
+    overflow: hidden;
+    background-color: #e5e5e5;
+    border-bottom: 1px solid #fff
+}
+
+.wk_namespace .dropdown-menu>li>a {
+    display: block;
+    padding: 3px 20px;
+    clear: both;
+    font-weight: normal;
+    line-height: 20px;
+    color: #333;
+    white-space: nowrap
+}
+
+.wk_namespace .dropdown-menu>li>a:hover,
+.wk_namespace .dropdown-menu>li>a:focus,
+.wk_namespace .dropdown-submenu:hover>a,
+.wk_namespace .dropdown-submenu:focus>a {
+    text-decoration: none;
+    color: #fff;
+    background-color: #0081c2;
+    background-image: -moz-linear-gradient(top, #08c, #0077b3);
+    background-image: -webkit-gradient(linear, 0 0, 0 100%, from(#08c), to(#0077b3));
+    background-image: -webkit-linear-gradient(top, #08c, #0077b3);
+    background-image: -o-linear-gradient(top, #08c, #0077b3);
+    background-image: linear-gradient(to bottom, #08c, #0077b3);
+    background-repeat: repeat-x;
+    filter: progid:DXImageTransform.Microsoft.gradient(startColorstr='#FF0088CC', endColorstr='#FF0077B3', GradientType=0)
+}
+
+.wk_namespace .dropdown-menu>.active>a,
+.wk_namespace .dropdown-menu>.active>a:hover,
+.wk_namespace .dropdown-menu>.active>a:focus {
+    color: #fff;
+    text-decoration: none;
+    outline: 0;
+    background-color: #0081c2;
+    background-image: -moz-linear-gradient(top, #08c, #0077b3);
+    background-image: -webkit-gradient(linear, 0 0, 0 100%, from(#08c), to(#0077b3));
+    background-image: -webkit-linear-gradient(top, #08c, #0077b3);
+    background-image: -o-linear-gradient(top, #08c, #0077b3);
+    background-image: linear-gradient(to bottom, #08c, #0077b3);
+    background-repeat: repeat-x;
+    filter: progid:DXImageTransform.Microsoft.gradient(startColorstr='#FF0088CC', endColorstr='#FF0077B3', GradientType=0)
+}
+
+.wk_namespace .dropdown-menu>.disabled>a,
+.wk_namespace .dropdown-menu>.disabled>a:hover,
+.wk_namespace .dropdown-menu>.disabled>a:focus {
+    color: #999
+}
+
+.wk_namespace .dropdown-menu>.disabled>a:hover,
+.wk_namespace .dropdown-menu>.disabled>a:focus {
+    text-decoration: none;
+    background-color: transparent;
+    background-image: none;
+    filter: progid:DXImageTransform.Microsoft.gradient(enabled=false);
+    cursor: default
+}
+
+.wk_namespace .open {
+    *z-index: 1000
+}
+
+.wk_namespace .open>.dropdown-menu {
+    display: block
+}
+
+.wk_namespace .dropdown-backdrop {
+    position: fixed;
+    left: 0;
+    right: 0;
+    bottom: 0;
+    top: 0;
+    z-index: 990
+}
+
+.wk_namespace .pull-right>.dropdown-menu {
+    right: 0;
+    left: auto
+}
+
+.wk_namespace .dropup .caret,
+.wk_namespace .navbar-fixed-bottom .dropdown .caret {
+    border-top: 0;
+    border-bottom: 4px solid #000;
+    content: ""
+}
+
+.wk_namespace .dropup .dropdown-menu,
+.wk_namespace .navbar-fixed-bottom .dropdown .dropdown-menu {
+    top: auto;
+    bottom: 100%;
+    margin-bottom: 1px
+}
+
+.wk_namespace .dropdown-submenu {
+    position: relative
+}
+
+.wk_namespace .dropdown-submenu>.dropdown-menu {
+    top: 0;
+    left: 100%;
+    margin-top: -6px;
+    margin-left: -1px;
+    -webkit-border-radius: 0 6px 6px 6px;
+    -moz-border-radius: 0 6px 6px 6px;
+    border-radius: 0 6px 6px 6px
+}
+
+.wk_namespace .dropdown-submenu:hover>.dropdown-menu {
+    display: block
+}
+
+.wk_namespace .dropup .dropdown-submenu>.dropdown-menu {
+    top: auto;
+    bottom: 0;
+    margin-top: 0;
+    margin-bottom: -2px;
+    -webkit-border-radius: 5px 5px 5px 0;
+    -moz-border-radius: 5px 5px 5px 0;
+    border-radius: 5px 5px 5px 0
+}
+
+.wk_namespace .dropdown-submenu>a:after {
+    display: block;
+    content: " ";
+    float: right;
+    width: 0;
+    height: 0;
+    border-color: transparent;
+    border-style: solid;
+    border-width: 5px 0 5px 5px;
+    border-left-color: #cccccc;
+    margin-top: 5px;
+    margin-right: -10px
+}
+
+.wk_namespace .dropdown-submenu:hover>a:after {
+    border-left-color: #fff
+}
+
+.wk_namespace .dropdown-submenu.pull-left {
+    float: none
+}
+
+.wk_namespace .dropdown-submenu.pull-left>.dropdown-menu {
+    left: -100%;
+    margin-left: 10px;
+    -webkit-border-radius: 6px 0 6px 6px;
+    -moz-border-radius: 6px 0 6px 6px;
+    border-radius: 6px 0 6px 6px
+}
+
+.wk_namespace .dropdown .dropdown-menu .nav-header {
+    padding-left: 20px;
+    padding-right: 20px
+}
