--- a/wanikani-phonetic-compounds/css/chargrid.css
+++ b/wanikani-phonetic-compounds/css/chargrid.css
@@ -1,23 +1,20 @@
 .wk_namespace ul,
-.wk_namespace ol
-{
+.wk_namespace ol {
     font-size: 14px;
     padding:0;
     margin:0 0 10px 25px
 }
 
-.wk_namespace a
-{
+.wk_namespace a {
     text-decoration:none
 }
 
-.wk_namespace ul.radical
-{
+.wk_namespace ul.radical {
     font-size: 16px;
 }
 
-.wk_namespace ul.single-character-grid li[id|=kanji]
-{
+.wk_namespace ul.single-character-grid li[id|=kanji],
+.wk_namespace ul.multi-character-grid  li[id|=kanji] {
     background-color:#f100a1;
     background-image:-moz-linear-gradient(top, #f0a, #dd0093);
     background-image:-webkit-gradient(linear, 0 0, 0 100%, from(#f0a), to(#dd0093));
@@ -31,8 +28,8 @@
     border-left:1px solid #f6c
 }
 
-.wk_namespace ul.single-character-grid li[id|=radical]
-{
+.wk_namespace ul.single-character-grid li[id|=radical],
+.wk_namespace ul.multi-character-grid  li[id|=radical] {
     background-color:#00a1f1;
     background-image:-moz-linear-gradient(top, #0af, #0093dd);
     background-image:-webkit-gradient(linear, 0 0, 0 100%, from(#0af), to(#0093dd));
@@ -46,8 +43,8 @@
     border-left:1px solid #88d7ff
 }
 
-.wk_namespace ul.single-character-grid li[id|=vocabulary]
-{
+.wk_namespace ul.single-character-grid li[id|=vocabulary],
+.wk_namespace ul.multi-character-grid  li[id|=vocabulary] {
     background-color:#a100f1;
     background-image:-moz-linear-gradient(top, #a0f, #9300dd);
     background-image:-webkit-gradient(linear, 0 0, 0 100%, from(#a0f), to(#9300dd));
@@ -61,34 +58,29 @@
     border-left:1px solid #c655ff
 }
 
-.wk_namespace ul.single-character-grid
-{
+.wk_namespace ul.single-character-grid,
+.wk_namespace ul.multi-character-grid {
     margin:0
 }
 
 .wk_namespace ul.single-character-grid li.character-item.locked,
-.wk_namespace ul.single-character-grid li.character-item.notInWK
-{
+.wk_namespace ul.single-character-grid li.character-item.notInWK,
+.wk_namespace ul.multi-character-grid  li.character-item.locked {
     background-image:url("https://cdn-staging.wanikani.com/assets/default-v2/stripes-5e8494366c1615da046bd0f587cfeef6786e7ba17863df1329767ca3b89140e0.png");
     background-repeat:repeat
 }
 
 .wk_namespace ul.single-character-grid li.character-item.locked.kanji,
-.wk_namespace ul.single-character-grid li.character-item.notInWK.kanji
-{
+.wk_namespace ul.single-character-grid li.character-item.notInWK.kanji,
+.wk_namespace ul.multi-character-grid  li.character-item.locked.kanji {
     background-color:#f0a;
-    background-image:none;
-    background-image:none;
-    background-image:none;
-    background-image:none;
-    background-image:none;
     background-image:none;
     background-repeat:no-repeat;
     filter:none
 }
 
-.wk_namespace ul.single-character-grid li.character-item.burned
-{
+.wk_namespace ul.single-character-grid li.character-item.burned,
+.wk_namespace ul.multi-character-grid  li.character-item.burned {
     background-color:#505050;
     background-image:-moz-linear-gradient(top, #555, #484848);
     background-image:-webkit-gradient(linear, 0 0, 0 100%, from(#555), to(#484848));
@@ -106,14 +98,15 @@
 }
 
 .wk_namespace ul.single-character-grid li.character-item.burned span.character,
-.wk_namespace ul.single-character-grid li.character-item.burned ul>li
-{
+.wk_namespace ul.single-character-grid li.character-item.burned ul>li,
+.wk_namespace ul.multi-character-grid  li.character-item.burned span.character,
+.wk_namespace ul.multi-character-grid  li.character-item.burned ul>li {
     opacity:0.4;
     filter:alpha(opacity=40)
 }
 
-.wk_namespace ul.single-character-grid li.character-item
-{
+.wk_namespace ul.single-character-grid li.character-item,
+.wk_namespace ul.multi-character-grid  li.character-item {
     display:inline-block;
     position:relative;
     width:116px;
@@ -121,78 +114,168 @@
     text-align:center
 }
 
-.wk_namespace ul.single-character-grid li.character-item span.character
-{
+.wk_namespace ul.single-character-grid li.character-item span.character,
+.wk_namespace ul.multi-character-grid  li.character-item span.character {
     font-size:72px;
     font-weight:bold;
     line-height:1.5em;
     text-shadow:0 2px 0 rgba(0,0,0,0.3)
 }
 
-.wk_namespace ul.single-character-grid li.character-item a
-{
+.wk_namespace ul.single-character-grid li.character-item a,
+.wk_namespace ul.multi-character-grid  li.character-item a {
     display:block;
     color:inherit
 }
 
-.wk_namespace ul.single-character-grid li.character-item a:hover
-{
+.wk_namespace ul.single-character-grid li.character-item a:hover,
+.wk_namespace ul.multi-character-grid  li.character-item a:hover {
     text-decoration:none
 }
 
-.wk_namespace ul.single-character-grid li.character-item ul
-{
+.wk_namespace ul.single-character-grid li.character-item ul,
+.wk_namespace ul.multi-character-grid  li.character-item ul {
     margin:0;
     padding-bottom:10px
 }
 
-.wk_namespace ul.single-character-grid li.character-item ul>li
-{
+.wk_namespace ul.single-character-grid li.character-item ul>li,
+.wk_namespace ul.multi-character-grid  li.character-item ul>li {
     display:block;
     font-weight:400;
     line-height:1.5em;
     text-shadow:0 1px 0 rgba(0,0,0,0.3)
 }
 
-.wk_namespace ul.single-character-grid li.character-item ul>li:nth-child(2)
-{
+.wk_namespace ul.single-character-grid li.character-item ul>li:nth-child(2),
+.wk_namespace ul.multi-character-grid  li.character-item ul>li:nth-child(2) {
     font-family:"Open Sans", "Helvetica Neue", Helvetica, Arial, sans-serif
 }
 
 .wk_namespace ul.single-character-grid li.character-item span.character,
-.wk_namespace ul.single-character-grid li.character-item ul>li
-{
+.wk_namespace ul.single-character-grid li.character-item ul>li,
+.wk_namespace ul.multi-character-grid  li.character-item span.character,
+.wk_namespace ul.multi-character-grid  li.character-item ul>li {
     -webkit-transition:text-shadow ease-out 0.3s;
     -moz-transition:text-shadow ease-out 0.3s;
     -o-transition:text-shadow ease-out 0.3s;
     transition:text-shadow ease-out 0.3s
 }
 
-.wk_namespace ul.single-character-grid li.character-item:hover ul>li
-{
+.wk_namespace ul.single-character-grid li.character-item:hover ul>li,
+.wk_namespace ul.multi-character-grid  li.character-item:hover ul>li {
     text-shadow:0 1px 0 rgba(0,0,0,0.3),0 0 40px #fff
 }
 
-.wk_namespace ul.single-character-grid li.character-item:hover span.character
-{
+.wk_namespace ul.single-character-grid li.character-item:hover span.character,
+.wk_namespace ul.multi-character-grid  li.character-item:hover span.character {
     text-shadow:0 2px 0 rgba(0,0,0,0.3),0 0 40px #fff
 }
 
-.wk_namespace ul.single-character-grid li.character-item:active
-{
+.wk_namespace ul.single-character-grid li.character-item:active,
+.wk_namespace ul.multi-character-grid  li.character-item:active {
     -webkit-box-shadow:0 15px 15px rgba(0,0,0,0.4) inset;
     -moz-box-shadow:0 15px 15px rgba(0,0,0,0.4) inset;
     box-shadow:0 15px 15px rgba(0,0,0,0.4) inset
 }
 
-.wk_namespace ul.single-character-grid li.character-item:active ul>li
-{
+.wk_namespace ul.single-character-grid li.character-item:active ul>li,
+.wk_namespace ul.multi-character-grid  li.character-item:active ul>li {
     text-shadow:0 1px 0 rgba(0,0,0,0.3),0 0 40px #fff
 }
 
-.wk_namespace ul.single-character-grid li.character-item:active span.character
-{
+.wk_namespace ul.single-character-grid li.character-item:active span.character,
+.wk_namespace ul.multi-character-grid  li.character-item:active span.character {
     text-shadow:0 -2px 0 rgba(0,0,0,0.3),0 0 40px #fff
+}
+
+
+
+.wk_namespace ul.multi-character-grid li[id|=radical] img {
+    width: 25px;
+    height: 25px
+}
+
+.wk_namespace ul.multi-character-grid li[id|=radical] ul>li:first-child {
+    display: none !important
+}
+
+.wk_namespace ul.multi-character-grid li[id|=radical] ul>li:last-child {
+    line-height: 2.6em
+}
+
+.wk_namespace ul.multi-character-grid li.character-item {
+    display: block;
+    width: 100%;
+    text-align: left;
+    border-left: none
+}
+
+.wk_namespace ul.multi-character-grid li.character-item a {
+    padding: 12px
+}
+
+.wk_namespace ul.multi-character-grid li.character-item span.character {
+    font-size: 27px;
+    line-height: 1em
+}
+
+.wk_namespace ul.multi-character-grid li.character-item ul {
+    display: inline-block;
+    float: right;
+    text-align: right;
+    font-size: 10px
+}
+
+.wk_namespace ul.multi-character-grid li.character-item ul>li {
+    line-height: 1.4em
+}
+
+.wk_namespace ul.multi-character-grid li.character-item.burned {
+    border-left: 0;
+    -webkit-box-shadow: 0 5px 5px rgba(0,0,0,0.4) inset;
+    -moz-box-shadow: 0 5px 5px rgba(0,0,0,0.4) inset;
+    box-shadow: 0 5px 5px rgba(0,0,0,0.4) inset
+}
+
+.wk_namespace ul.multi-character-grid li.character-item:active {
+    -webkit-box-shadow: 0 8px 8px rgba(0,0,0,0.4) inset;
+    -moz-box-shadow: 0 8px 8px rgba(0,0,0,0.4) inset;
+    box-shadow: 0 8px 8px rgba(0,0,0,0.4) inset
+}
+
+.wk_namespace ul.multi-character-grid span.recently-unlocked-badge:before {
+    top: 1.1em;
+    left: -1.1em;
+    font-size: 11px;
+    text-align: center
+}
+
+.wk_namespace ul.multi-character-grid-extra-styling {
+    -webkit-border-radius: 3px;
+    -moz-border-radius: 3px;
+    border-radius: 3px;
+    -webkit-box-shadow: 0 2px 0 rgba(0,0,0,0.3);
+    -moz-box-shadow: 0 2px 0 rgba(0,0,0,0.3);
+    box-shadow: 0 2px 0 rgba(0,0,0,0.3)
+}
+
+.wk_namespace ul.multi-character-grid-extra-styling li.character-item:first-child {
+    -webkit-border-top-left-radius: 3px;
+    -moz-border-radius-topleft: 3px;
+    border-top-left-radius: 3px;
+    -webkit-border-top-right-radius: 3px;
+    -moz-border-radius-topright: 3px;
+    border-top-right-radius: 3px
+}
+
+.wk_namespace ul.multi-character-grid-extra-styling li.character-item:last-child {
+    -webkit-border-bottom-left-radius: 3px;
+    -moz-border-radius-bottomleft: 3px;
+    border-bottom-left-radius: 3px;
+    -webkit-border-bottom-right-radius: 3px;
+    -moz-border-radius-bottomright: 3px;
+    border-bottom-right-radius: 3px
 }
 
 
@@ -354,33 +437,3 @@
     border-radius:50%;
     z-index:999
 }
-
-
-.wk_namespace ul.multi-character-grid-extra-styling-767px
-{
-    -webkit-border-radius:3px;
-    -moz-border-radius:3px;
-    border-radius:3px;
-    -webkit-box-shadow:0 2px 0 rgba(0,0,0,0.3);
-    -moz-box-shadow:0 2px 0 rgba(0,0,0,0.3);
-    box-shadow:0 2px 0 rgba(0,0,0,0.3)}
-
-.wk_namespace ul.multi-character-grid-extra-styling-767px li.character-item:first-child
-{
-    -webkit-border-top-left-radius:3px;
-    -moz-border-radius-topleft:3px;
-    border-top-left-radius:3px;
-    -webkit-border-top-right-radius:3px;
-    -moz-border-radius-topright:3px;
-    border-top-right-radius:3px}
-
-.wk_namespace ul.multi-character-grid-extra-styling-767px li.character-item:last-child
-{
-    -webkit-border-bottom-left-radius:3px;
-    -moz-border-radius-bottomleft:3px;
-    border-bottom-left-radius:3px;
-    -webkit-border-bottom-right-radius:3px;
-    -moz-border-radius-bottomright:3px;
-    border-bottom-right-radius:3px
-}
-
