Added all semantic elements in compounds, fixed some reading mistakes from new test case

--- a/wanikani-phonetic-compounds/css/keisei.css
+++ b/wanikani-phonetic-compounds/css/keisei.css
@@ -24,7 +24,7 @@
 }
 
 .wk_namespace .keisei_obscure_reading {
-    color: #aaa;
+    color: darkorange;
 }
 
 .wk_namespace .keisei_alternative_reading {
