--- a/wanikani-phonetic-compounds/css/keisei.css
+++ b/wanikani-phonetic-compounds/css/keisei.css
@@ -99,7 +99,7 @@
     flex-direction: row;
 }
 
-.wk_namespace #keisei_phonetic_grid {
+.wk_namespace .keisei_phonetic_grid {
     display: flex;
     flex-direction: row;
     padding-bottom: 10px;
@@ -107,14 +107,14 @@
     border-bottom: 1px solid #d5d5d5;
 }
 
-.wk_namespace #keisei_phongrid_header {
+.wk_namespace .keisei_phongrid_header {
     display: flex;
     flex-wrap: nowrap;
     flex-direction: row;
-    margin-right: 10px;
+    margin-right: 10px !important;
 }
 
-.wk_namespace #keisei_phongrid_compounds {
+.wk_namespace .keisei_phongrid_compounds {
     display: flex;
     flex-direction: row;
     flex-wrap: wrap;
@@ -122,18 +122,18 @@
 
 @media (max-width: 767px)
 {
-    .wk_namespace #keisei_phonetic_grid,
+    .wk_namespace .keisei_main_phonetic_grid,
     .wk_namespace .keisei_spaced_chargrid {
         flex-direction: column;
     }
 
-    .wk_namespace #keisei_phongrid_header {
+    .wk_namespace .keisei_phongrid_header {
         flex-direction: column;
-        margin-right: 0;
+        margin-right: 0 !important;
         margin-bottom: 6px;
     }
 
-    .wk_namespace #keisei_phongrid_compounds {
+    .wk_namespace .keisei_phongrid_compounds {
         flex-direction: column;
     }
 }
